--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,33 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # UI
+  cupertino_icons: ^1.0.3
 
-  cupertino_icons: ^1.0.2
+  # DI
+  injectable: ^1.4.1
+  get_it: ^7.1.3
+
+  # Database
+  moor: ^4.4.0
+  sqlite3_flutter_libs: ^0.5.0
+  path_provider: ^2.0.2
+  path: ^1.8.0
+
+  # Auto-gen
+  freezed_annotation: ^0.14.2
+  moor_generator: ^4.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # Auto-gen
+  freezed: ^0.14.2
+  injectable_generator: ^1.4.1
+
+  # Build
+  build_runner: ^2.0.5
 
 flutter:
 
