--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,33 +14,47 @@ dependencies:
 
   # UI
   cupertino_icons: ^1.0.3
+  another_flushbar: ^1.10.24
 
   # DI
   injectable: ^1.4.1
   get_it: ^7.1.3
 
   # Database
-  moor: ^4.4.0
+  moor: ^4.4.1
+  moor_flutter: ^4.0.0
   sqlite3_flutter_libs: ^0.5.0
   path_provider: ^2.0.2
   path: ^1.8.0
 
+  # State management
+  flutter_bloc: ^7.0.1
+
+  # Architecture
+  dartz: ^0.10.0-nullsafety.2
+  rxdart: ^0.27.1
+
   # Auto-gen
   freezed_annotation: ^0.14.2
-  moor_generator: ^4.4.0
+  moor_generator: ^4.4.1
+  auto_route: ^2.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  # Linting
+  lint: ^1.5.3
+
   # Auto-gen
   freezed: ^0.14.2
   injectable_generator: ^1.4.1
+  auto_route_generator: ^2.1.0
 
   # Build
-  build_runner: ^2.0.5
+  build_runner: ^2.0.6
 
 flutter:
-
   uses-material-design: true
-
+  assets:
+    - assets/db.sqlite
