--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,3 +12,7 @@ analyzer:
     - lib/**/*.config.dart
     - lib/**/*.g.dart
     - lib/**/*.gr.dart
+
+linter:
+  rules:
+    avoid_positional_boolean_parameters: false
